canary/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: default
      address: { socket_address: {address: 0.0.0.0, port_value: 80 }}
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config:
            stat_prefix: ingress_http
            codec_type: AUTO
            add_user_agent: true
            use_remote_address: true
            route_config:
              name: ipsum_route
              virtual_hosts:
              - name: local_ipsum
                domains: ["*"]
                routes:
                - match: { prefix: "/" }
                  route: 
                    weighted_clusters: 
                      total_weight: 100
                      clusters:
                        - name: service_ipsum_echo_1
                          weight: 5
                          metadata_match:
                            filter_metadata:
                              envoy.lb:
                                stage: 'canary'
                        - name: service_ipsum_echo_1
                          weight: 95
                          metadata_match:
                            filter_metadata:
                              envoy.lb:
                                stage: 'prod'
            http_filters:
              - name: envoy.router
  clusters:
    - name: service_ipsum_echo_1
      connect_timeout: 0.25s
      http_protocol_options: {}
      lb_policy: LEAST_REQUEST
      type: STATIC
      lb_subset_config:
        fallback_policy: DEFAULT_SUBSET
        default_subset:
          stage: prod
        subset_selectors:
        - keys:
          - stage
      load_assignment:
        cluster_name: service_ipsum_echo_1
        endpoints:
          - load_balancing_weight: 1
            lb_endpoints:
              - endpoint:
                  address: { socket_address: {address: 172.16.240.10, port_value: 5555 }}
                metadata:
                  filter_metadata:
                    envoy.lb:
                      version: '1.0'
                      stage: 'prod'
              - endpoint:
                  address: { socket_address: {address: 172.16.240.11, port_value: 5555 }}
                metadata:
                  filter_metadata:
                    envoy.lb:
                      version: '1.1'
                      stage: 'canary'
                      canary: true
